// Copyright (c) Mondoo, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package cnspec.policy.v1;
option go_package = "go.mondoo.com/cnspec/v13/policy";

import "sbom/mql_sbom.proto";

// Service to handle SBOM data
service Sbom {
  // BulkUploadSbom is used to upload a list of SBOMs for a given space.
  // Each SBOM includes identification information for the source and asset.
  // It is expected, that only one SBOM is uploaded per asset.
  rpc BulkUploadSbom(BulkUploadSbomRequest) returns (BulkUploadSbomResponse) {}
}

// BulkUploadSbomRequest is the request for the BulkUploadSbom method.
message BulkUploadSbomRequest {
  // The space_mrn is the space MRN to upload the SBOMs to.
  string space_mrn = 1;
  // The sboms is the list of SBOMs to upload.
  // Each SBOM includes identification information for the source and asset.
  repeated mondoo.sbom.v1.Sbom sboms = 2;
  // create_assets indicates whether to create assets in the backend when they
  // are not found
  bool create_assets = 3;
  string asset_mrn = 4;
}

message BulkUploadSbomResponse {
  int32 count = 1;
  // The asset_mrns is the list of asset MRNs that were uploaded.
  repeated string asset_mrns = 2;
}

// SbomSourceName is used to identify the source of the SBOM.
enum SbomSourceName {
  // SbomSourceName_SBOM_SOURCE_UNSPECIFIED represents an unspecified source
  SBOM_SOURCE_UNSPECIFIED = 0;
  // SbomSourceName_SBOM_SOURCE_MONDOO represents an SBOM coming from Mondoo,
  // either from cnquery or cnspec
  SBOM_SOURCE_MONDOO = 1;
  // SbomSourceName_SBOM_SOURCE_MSDEFENDER represents an SBOM coming from
  // Microsoft Defender
  SBOM_SOURCE_MSDEFENDER = 2;
  // SbomSourceName_SBOM_SOURCE_SENTINELONE represents an SBOM coming from
  // SentinelOne
  SBOM_SOURCE_SENTINELONE = 3;
  // SbomSourceName_SBOM_SOURCE_CROWDSTRIKE represents an SBOM coming from
  // CrowdStrike
  SBOM_SOURCE_CROWDSTRIKE = 4;
}
